<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clement.projetquiz.OptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_choixop"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_diffi"
        android:id="@+id/textView10"
        android:textColor="@color/colorNoir"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficulte"
        android:numStars="3"
        android:rating="2"
        android:stepSize="1"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_colorfond"
        android:id="@+id/textView11"
        android:layout_below="@+id/difficulte"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorNoir"
        android:layout_marginTop="50dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/difficulte"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <RadioButton
            android:id="@+id/radioBleu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_bleu"
            android:textColor="@color/bleuMarine" />

        <RadioButton
            android:id="@+id/radioRouge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rouge"
            android:textColor="@color/darkRed" />

        <RadioButton
            android:id="@+id/radioNoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_noir"
            android:textColor="@color/colorNoir" />

        <RadioButton
            android:id="@+id/radioRose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rose"
            android:textColor="@color/colorViolet" />

        </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_retour"
        android:id="@+id/button6"
        android:onClick="returnMain"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:background="@drawable/bouton_orange"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:text="@string/str_interro"
        android:textColor="@color/colorBlanc"
        android:id="@+id/button7"
        android:onClick="ouvrirHelp"
        android:background="@drawable/bouton_interro"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
