<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clement.projetquiz.CategoriesActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_culture"
        android:id="@+id/culture"
        android:layout_marginBottom="35dp"
        android:onClick="gererCatego"
        android:layout_above="@+id/informa"
        android:layout_alignLeft="@+id/informa"
        android:layout_alignRight="@+id/informa"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@drawable/bouton_orange" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_informatique"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/informa"
        android:onClick="gererCatego"
        android:layout_above="@+id/jeux"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:textAllCaps="false"
        android:background="@drawable/bouton_bleu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_jeux"
        android:id="@+id/jeux"
        android:layout_marginBottom="147dp"
        android:onClick="gererCatego"
        android:layout_above="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/informa"
        android:layout_alignRight="@+id/informa"
        android:textAllCaps="false"
        android:background="@drawable/bouton_violet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_signat"
        android:id="@+id/textView5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorRouge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_cat"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
